--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
-  "Programming Language :: Python :: 3.14",
+  # "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
   "pdfplumber>=0.11.5,<0.12",
