--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,13 +89,13 @@ exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
 
 [tool.hatch.build.targets.sdist]
 include = ["einvoice_lens/**"]
-exclude = [".github", "docs"]
+exclude = [".github", "docs", "tests"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["einvoice-lens"]
 only-packages = true
 include = ["einvoice_lens/**"]
-exclude = [".github", "docs"]
+exclude = [".github", "docs", "tests"]
 
 [tool.hatch.publish.index]
 disable = false
