--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,6 @@ on:
       - created
 
 env:
-  UV_SYSTEM_PYTHON: 1
   HATCH_VERBOSE: 1
 
 jobs:
@@ -40,8 +39,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install --upgrade "pip>=25.1.1,<26.0.0";
-          uv pip install "$(cat requirements-dev.txt | grep hatch)";
+          uv pip install --upgrade "pip>=25.1.1,<26.0.0" --system;
+          uv pip install "$(cat requirements-dev.txt | grep hatch)" --system;
           hatch --version
 
       - name: Build distribution
