Updated the component

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ path = "einvoice_lens/__init__.py"
 [tool.hatch.envs.default]
 installer = "uv"
 dependencies = [
-  "uv>=0.7.3,<0.8.0",
+  "uv>=0.7.3,<0.9.0",
   "coverage[toml]>=6.5",
   "pytest>=8.2.0,<8.5.0",
   "ruff>=0.6.2,<0.7.0",
@@ -92,8 +92,8 @@ include = ["einvoice_lens/**"]
 exclude = [".github", "docs", "tests"]
 
 [tool.hatch.build.targets.wheel]
-# packages = ["einvoice_lens"]
-# only-packages = true
+packages = ["einvoice_lens"]
+only-packages = true
 include = ["einvoice_lens/**"]
 exclude = [".github", "docs", "tests"]
 
