--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -8,9 +8,6 @@ on:
       - ".github/workflows/compliance.yml"
   workflow_dispatch:
 
-env:
-  UV_SYSTEM_PYTHON: 1
-
 jobs:
   compliance:
     runs-on: ubuntu-22.04
@@ -33,8 +30,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install --upgrade "pip>=25.1.1,<26.0.0";
-          uv pip install $(grep -v '^#' requirements-dev.txt | grep ruff);
+          uv pip install --upgrade "pip>=25.1.1,<26.0.0" --system;
+          uv pip install $(grep -v '^#' requirements-dev.txt | grep ruff) --system;
 
       # Include `--output-format=github` to enable automatic inline annotations.
       - name: Run validate progress
