--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,7 @@ on:
       - created
 
 env:
-  HATCH_VERBOSE: 1
+  HATCH_VERBOSE: 0
 
 jobs:
   publish:
@@ -41,13 +41,12 @@ jobs:
         run: |
           uv pip install --upgrade "pip>=25.1.1,<26.0.0" --system;
           uv pip install "$(cat requirements-dev.txt | grep hatch)" --system;
-          hatch --version
 
       - name: Build distribution
         run: hatch build
 
-      # - name: Publish
-      #   uses: pypa/gh-action-pypi-publish@v1.12.4
+      - name: Publish
+        uses: pypa/gh-action-pypi-publish@v1.12.4
 
       - name: Dump GitHub context
         env:
