--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,6 @@ on:
       - ".github/workflows/test.yml"
   workflow_dispatch:
 
-env:
-  UV_SYSTEM_PYTHON: 1
-
 jobs:
   test:
     runs-on: ubuntu-22.04
@@ -36,8 +33,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install --upgrade "pip>=25.1.1,<26.0.0";
-          uv pip install "$(cat requirements-dev.txt | grep hatch)";
+          uv pip install --upgrade "pip>=25.1.1,<26.0.0" --system;
+          uv pip install "$(cat requirements-dev.txt | grep hatch)" --system;
 
       - name: Test package
         run: |
