--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
   # "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
+  "strx>=0.3.1,<0.4",
   "pdfplumber>=0.11.5,<0.12",
   "polars>=1.7.1,<1.35",
   "google-crc32c>=1.7.1,<2.0",
